--- a/collections.html
+++ b/collections.html
@@ -1,1 +1,86 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Collections — AhamStree</title>
+  <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+  <div class="saree-border"></div>
+
+  <header>
+    <div class="container">
+      <div class="header-main">
+        <a class="brand" href="index.html">
+          <img src="assets/logo.png" alt="AhamStree logo"/>
+          <div class="name"><strong>AhamStree</strong><span>Ethnic Elegance</span></div>
+        </a>
+
+        <div class="header-actions">
+          <button class="btn ghost hamburger" id="hamburger" aria-label="Open menu">☰</button>
+          <button class="btn primary" data-whatsapp>WhatsApp 💬</button>
+        </div>
+      </div>
+
+      <div class="navbar">
+        <div class="container" style="padding:0;">
+          <nav class="navlinks" id="navlinks">
+            <a href="collections.html">Sarees</a>
+            <a href="collections.html">Chanderi</a>
+            <a href="collections.html">Cotton</a>
+            <a href="collections.html">Kurta Sets</a>
+            <a href="collections.html">Dupattas</a>
+            <a href="about.html">Our Story</a>
+            <a href="contact.html">Contact</a>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <h2>Collections</h2>
+
+      <div class="card" style="padding:14px; margin-bottom:14px;">
+        <div style="display:flex; flex-wrap:wrap; gap:10px; align-items:center; justify-content:space-between;">
+          <div style="display:flex; flex-wrap:wrap; gap:10px;">
+            <span class="btn" style="cursor:default;">Sarees</span>
+            <span class="btn" style="cursor:default;">Chanderi</span>
+            <span class="btn" style="cursor:default;">Cotton</span>
+            <span class="btn" style="cursor:default;">Festive</span>
+          </div>
+          <div style="display:flex; gap:10px; align-items:center;">
+            <span class="small" style="color:var(--muted);">Sort:</span>
+            <select class="btn" style="padding:10px 12px;">
+              <option>Featured</option>
+              <option>Price: Low to High</option>
+              <option>Price: High to Low</option>
+              <option>New Arrivals</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="products" id="collectionGrid"></div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="footer-bottom small" style="border-top:0;">
+        <div>© <span id="year"></span> AhamStree</div>
+        <div><a href="contact.html">Contact</a> • <a href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a></div>
+      </div>
+    </div>
+  </footer>
+
+  <div class="saree-border"></div>
+
+  <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
+  <script src="js/products.js"></script>
+  <script src="js/app.js"></script>
+</body>
+</html>
 
