--- a/product.html
+++ b/product.html
@@ -1,1 +1,41 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Product — AhamStree</title>
+  <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+  <div class="saree-border"></div>
+
+  <header>
+    <div class="container">
+      <div class="header-main">
+        <a class="brand" href="index.html">
+          <img src="assets/logo.png" alt="AhamStree logo"/>
+          <div class="name"><strong>AhamStree</strong><span>Ethnic Elegance</span></div>
+        </a>
+        <div class="header-actions">
+          <a class="btn" href="collections.html"><span>Back</span> ←</a>
+          <button class="btn primary" data-whatsapp><span>WhatsApp</span> 💬</button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div id="productDetails" style="display:grid; grid-template-columns:1fr 1fr; gap:14px;"></div>
+      <style>
+        @media (max-width: 980px){ #productDetails{ grid-template-columns:1fr; } }
+      </style>
+    </div>
+  </main>
+
+  <div class="saree-border"></div>
+  <script src="js/products.js"></script>
+  <script src="js/app.js"></script>
+</body>
+</html>
 
