--- a/about.html
+++ b/about.html
@@ -1,1 +1,46 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Our Story — AhamStree</title>
+  <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+  <div class="saree-border"></div>
+
+  <header>
+    <div class="container">
+      <div class="header-main">
+        <a class="brand" href="index.html">
+          <img src="assets/logo.png" alt="AhamStree logo"/>
+          <div class="name"><strong>AhamStree</strong><span>Ethnic Elegance</span></div>
+        </a>
+        <div class="header-actions">
+          <a class="btn" href="collections.html">Shop 🛍️</a>
+          <button class="btn primary" data-whatsapp>WhatsApp 💬</button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="card" style="padding:18px;">
+        <h2 style="margin-top:0;">Our Story</h2>
+        <p class="small">
+          AhamStree celebrates Indian heritage with a modern sensibility — refined silhouettes, premium fabrics,
+          and timeless elegance for every occasion.
+        </p>
+        <p class="small">
+          For styling help or availability, message us on WhatsApp: <a href="https://wa.me/919582297550" target="_blank" rel="noreferrer">9582297550</a>.
+        </p>
+      </div>
+    </div>
+  </main>
+
+  <div class="saree-border"></div>
+  <script src="js/app.js"></script>
+</body>
+</html>
 
