--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,56 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Contact — AhamStree</title>
+  <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+  <div class="saree-border"></div>
+
+  <header>
+    <div class="container">
+      <div class="header-main">
+        <a class="brand" href="index.html">
+          <img src="assets/logo.png" alt="AhamStree logo"/>
+          <div class="name"><strong>AhamStree</strong><span>Ethnic Elegance</span></div>
+        </a>
+        <div class="header-actions">
+          <a class="btn" href="collections.html">Shop 🛍️</a>
+          <button class="btn primary" data-whatsapp>WhatsApp 💬</button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="card" style="padding:18px;">
+        <h2 style="margin-top:0;">Contact</h2>
+        <p class="small">Fastest response: WhatsApp us at <strong>9582297550</strong>.</p>
+
+        <div style="display:flex; gap:10px; flex-wrap:wrap; margin:12px 0;">
+          <a class="btn primary" href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp Now</a>
+          <a class="btn" href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a>
+        </div>
+
+        <hr style="border:0; border-top:1px solid rgba(0,0,0,.08); margin:14px 0;"/>
+
+        <form onsubmit="event.preventDefault(); alert('Thanks! For now, please WhatsApp us to confirm orders.');">
+          <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
+            <input class="btn" style="border-radius:14px; justify-content:flex-start;" placeholder="Your name" required>
+            <input class="btn" style="border-radius:14px; justify-content:flex-start;" placeholder="Phone" required>
+          </div>
+          <textarea class="btn" style="border-radius:14px; width:100%; height:110px; justify-content:flex-start; margin-top:10px;" placeholder="Message" required></textarea>
+          <button class="btn primary" style="margin-top:10px;">Submit</button>
+        </form>
+      </div>
+    </div>
+  </main>
+
+  <div class="saree-border"></div>
+  <script src="js/app.js"></script>
+</body>
+</html>
 
