--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
   <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-  <div class="saree-border"></div>
-
+<div class="brand-ribbon fade-bottom">
   <div class="topbar">
     <div class="container">
-      <div class="pill">Handloom • Heritage • Contemporary</div>
+      <div class="pill">Handloom • Heritage • Chanderi Sarees</div>
       <div style="display:flex; gap:10px; align-items:center;">
         <a class="pill" href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a>
         <a class="pill" href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp: 9582297550</a>
       </div>
     </div>
   </div>
-
+<div class="header-shell">
   <header>
     <div class="container">
       <div class="header-main">
@@ -57,7 +56,8 @@
       </div>
     </div>
   </header>
-
+</div>
+</div>
   <main>
     <section class="hero">
       <div class="container">
@@ -126,8 +126,9 @@
   </main>
 
   <a class="btn primary fab" href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp 💬</a>
-
+<div class="brand-ribbon fade-top">
   <footer>
+    
     <div class="container">
       <div class="footer-grid">
         <div>
@@ -169,8 +170,7 @@
       </div>
     </div>
   </footer>
-
-  <div class="saree-border"></div>
+</div>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
