--- a/index.html
+++ b/index.html
@@ -3,74 +3,80 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>AhamStree — Ethnic Elegance</title>
+  <title>AhamStree — Chanderi Sarees</title>
   <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-<div class="brand-ribbon fade-bottom">
-  <div class="topbar">
-    <div class="container">
-      <div class="pill">Handloom • Heritage • Chanderi Sarees</div>
-      <div style="display:flex; gap:10px; align-items:center;">
-        <a class="pill" href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a>
-        <a class="pill" href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp: 9582297550</a>
+
+  <!-- TOP BRAND RIBBON -->
+  <div class="brand-ribbon fade-bottom">
+    <div class="topbar">
+      <div class="container">
+        <div class="pill">Handwoven • Chanderi Sarees • Premium Edits</div>
+        <div style="display:flex; gap:10px; align-items:center;">
+          <a class="pill" href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a>
+          <a class="pill" href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp: 9582297550</a>
+        </div>
       </div>
+    </div>
+
+    <div class="header-shell">
+      <header>
+        <div class="container">
+          <div class="header-main">
+            <a class="brand" href="index.html">
+              <img src="assets/logo.png" alt="AhamStree logo"/>
+              <div class="name">
+                <strong>AhamStree</strong>
+                <span>Chanderi Sarees</span>
+              </div>
+            </a>
+
+            <div class="search" role="search" aria-label="Site search">
+              <span>⌕</span>
+              <input placeholder="Search Chanderi silk, tissue, zari..." />
+            </div>
+
+            <div class="header-actions">
+              <button class="btn hamburger" id="hamburger" aria-label="Open menu">☰</button>
+              <a class="btn" href="collections.html"><span>Collections</span> 🛍️</a>
+              <button class="btn primary" data-whatsapp><span>WhatsApp</span> 💬</button>
+            </div>
+          </div>
+
+          <div class="navbar">
+            <div class="container">
+              <nav class="navlinks" id="navlinks" aria-label="Primary navigation">
+                <a href="collections.html">All Chanderi</a>
+                <a href="collections.html#silk">Chanderi Silk</a>
+                <a href="collections.html#cottonsilk">Cotton Silk</a>
+                <a href="collections.html#tissue">Tissue</a>
+                <a href="collections.html#zari">Zari Border</a>
+                <a href="about.html">Our Story</a>
+                <a href="contact.html">Contact</a>
+              </nav>
+            </div>
+          </div>
+
+        </div>
+      </header>
     </div>
   </div>
-<div class="header-shell">
-  <header>
-    <div class="container">
-      <div class="header-main">
-        <a class="brand" href="index.html">
-          <img src="assets/logo.png" alt="AhamStree logo"/>
-          <div class="name">
-            <strong>AhamStree</strong>
-            <span>Ethnic Elegance</span>
-          </div>
-        </a>
 
-        <div class="search" role="search" aria-label="Site search">
-          <span class="icon">⌕</span>
-          <input placeholder="Search sarees, dupattas, kurta sets..." />
-        </div>
-
-        <div class="header-actions">
-          <button class="btn ghost hamburger" id="hamburger" aria-label="Open menu">☰</button>
-          <a class="btn" href="collections.html"><span>Shop</span> 🛍️</a>
-          <button class="btn primary" data-whatsapp><span>WhatsApp</span> 💬</button>
-        </div>
-      </div>
-
-      <div class="navbar">
-        <div class="container" style="padding:0;">
-          <nav class="navlinks" id="navlinks" aria-label="Primary navigation">
-            <a href="collections.html">Sarees</a>
-            <a href="collections.html">Chanderi</a>
-            <a href="collections.html">Cotton</a>
-            <a href="collections.html">Kurta Sets</a>
-            <a href="collections.html">Dupattas</a>
-            <a href="about.html">Our Story</a>
-            <a href="contact.html">Contact</a>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </header>
-</div>
-</div>
   <main>
     <section class="hero">
       <div class="container">
         <div class="hero-grid">
           <div class="card hero-copy">
-            <div class="kicker">Premium Indian Ethnicwear</div>
-            <h1>Timeless drapes, modern grace.</h1>
+            <div class="kicker">Chanderi Sarees Only</div>
+            <h1>Chanderi sarees that feel as light as air.</h1>
             <p>
-              Discover curated sarees, dupattas, and sets that celebrate heritage with a refined, contemporary finish.
+              Curated handwoven Chanderi sarees — silk, cotton-silk and tissue edits crafted for timeless elegance.
+              Message us on WhatsApp to check availability and styling recommendations.
             </p>
             <div class="hero-ctas">
-              <a class="btn primary" href="collections.html">Shop Collections</a>
-              <button class="btn" data-whatsapp>Order on WhatsApp</button>
+              <a class="btn light" href="collections.html">Shop Collections</a>
+              <button class="btn primary" data-whatsapp>Order on WhatsApp</button>
               <button class="btn" data-instagram>Visit Instagram</button>
             </div>
           </div>
@@ -78,11 +84,11 @@
           <div class="card hero-side">
             <div class="banner">
               <strong>Need help choosing?</strong>
-              <span>Message us on WhatsApp with your occasion + budget — we’ll recommend options.</span>
+              <span>Send occasion + budget on WhatsApp — we’ll recommend the best Chanderi picks.</span>
             </div>
-            <div class="banner" style="background:linear-gradient(135deg, var(--gold-500), var(--gold-300)); color:var(--wine-900); border-color: rgba(42,0,16,.12);">
-              <strong>New Arrivals Weekly</strong>
-              <span>Fresh edits inspired by classic weaves.</span>
+            <div class="banner" style="background:linear-gradient(135deg, rgba(212,175,55,.35), rgba(243,226,181,.18)); color:#fff; border-color: rgba(243,226,181,.28);">
+              <strong>New Arrivals</strong>
+              <span>Fresh Chanderi edits added regularly.</span>
             </div>
           </div>
         </div>
@@ -91,27 +97,27 @@
 
     <section class="section">
       <div class="container">
-        <h2>Shop by Category</h2>
+        <h2 style="margin:0 0 14px; color:var(--brand-1);">Shop by Edit</h2>
         <div class="grid-4">
-          <a class="tile" href="collections.html">
-            <div class="img" style="aspect-ratio:16/10;"></div>
-            <div class="label">Sarees</div>
-            <div class="sub">Festive • Wedding • Daily</div>
+          <a class="tile" href="collections.html#silk">
+            <div class="img"></div>
+            <div class="label">Chanderi Silk</div>
+            <div class="sub">Festive • Zari • Premium</div>
           </a>
-          <a class="tile" href="collections.html">
-            <div class="img" style="aspect-ratio:16/10;"></div>
-            <div class="label">Chanderi</div>
-            <div class="sub">Light • Luxe • Elegant</div>
+          <a class="tile" href="collections.html#cottonsilk">
+            <div class="img"></div>
+            <div class="label">Cotton Silk</div>
+            <div class="sub">Light • Daily • Comfortable</div>
           </a>
-          <a class="tile" href="collections.html">
-            <div class="img" style="aspect-ratio:16/10;"></div>
-            <div class="label">Kurta Sets</div>
-            <div class="sub">Comfort • Style</div>
+          <a class="tile" href="collections.html#tissue">
+            <div class="img"></div>
+            <div class="label">Tissue Chanderi</div>
+            <div class="sub">Shimmer • Occasion Wear</div>
           </a>
-          <a class="tile" href="collections.html">
-            <div class="img" style="aspect-ratio:16/10;"></div>
-            <div class="label">Dupattas</div>
-            <div class="sub">Pairing essentials</div>
+          <a class="tile" href="collections.html#zari">
+            <div class="img"></div>
+            <div class="label">Zari Border Edit</div>
+            <div class="sub">Classic • Wedding Ready</div>
           </a>
         </div>
       </div>
@@ -119,62 +125,60 @@
 
     <section class="section">
       <div class="container">
-        <h2>Featured Picks</h2>
+        <h2 style="margin:0 0 14px; color:var(--brand-1);">Featured Chanderi Picks</h2>
         <div class="products" id="featuredProducts"></div>
       </div>
     </section>
   </main>
 
   <a class="btn primary fab" href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp 💬</a>
-<div class="brand-ribbon fade-top">
-  <footer>
-    
-    <div class="container">
-      <div class="footer-grid">
-        <div>
-          <div style="display:flex; align-items:center; gap:10px;">
-            <img src="assets/logo.png" alt="AhamStree logo" style="width:42px; height:42px;"/>
-            <div>
-              <div style="font-weight:900; letter-spacing:.3px;">AhamStree</div>
-              <div class="small">Ethnic Elegance</div>
+
+  <!-- BOTTOM BRAND RIBBON -->
+  <div class="brand-ribbon fade-top">
+    <footer>
+      <div class="container">
+        <div class="footer-grid">
+          <div>
+            <div style="display:flex; align-items:center; gap:10px;">
+              <img src="assets/logo.png" alt="AhamStree logo" style="width:44px; height:44px; object-fit:contain; filter: drop-shadow(0 8px 16px rgba(0,0,0,.28));"/>
+              <div>
+                <div style="font-weight:900; letter-spacing:.3px;">AhamStree</div>
+                <div class="small">Chanderi Sarees</div>
+              </div>
             </div>
+            <p class="small" style="margin-top:10px;">
+              Premium Chanderi sarees curated with timeless elegance.
+            </p>
           </div>
-          <p class="small" style="margin-top:10px;">
-            Premium ethnicwear curated with heritage weaves and refined finishing.
-          </p>
+
+          <div>
+            <div style="font-weight:900; margin-bottom:10px;">Shop</div>
+            <div class="small"><a href="collections.html">Collections</a></div>
+            <div class="small"><a href="collections.html#new">New Arrivals</a></div>
+          </div>
+
+          <div>
+            <div style="font-weight:900; margin-bottom:10px;">Company</div>
+            <div class="small"><a href="about.html">Our Story</a></div>
+            <div class="small"><a href="contact.html">Contact</a></div>
+          </div>
+
+          <div>
+            <div style="font-weight:900; margin-bottom:10px;">Connect</div>
+            <div class="small"><a href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a></div>
+            <div class="small"><a href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp: 9582297550</a></div>
+          </div>
         </div>
 
-        <div>
-          <div style="font-weight:900; margin-bottom:10px;">Shop</div>
-          <div class="small"><a href="collections.html">Collections</a></div>
-          <div class="small"><a href="collections.html">New Arrivals</a></div>
-          <div class="small"><a href="collections.html">Best Sellers</a></div>
-        </div>
-
-        <div>
-          <div style="font-weight:900; margin-bottom:10px;">Company</div>
-          <div class="small"><a href="about.html">Our Story</a></div>
-          <div class="small"><a href="contact.html">Contact</a></div>
-        </div>
-
-        <div>
-          <div style="font-weight:900; margin-bottom:10px;">Connect</div>
-          <div class="small"><a href="https://www.instagram.com/ahamstree/" target="_blank" rel="noreferrer">Instagram</a></div>
-          <div class="small"><a href="https://wa.me/919582297550" target="_blank" rel="noreferrer">WhatsApp: 9582297550</a></div>
+        <div class="footer-bottom small">
+          <div>© <span id="year"></span> AhamStree. All rights reserved.</div>
+          <div>Made with care.</div>
         </div>
       </div>
+    </footer>
+  </div>
 
-      <div class="footer-bottom small">
-        <div>© <span id="year"></span> AhamStree. All rights reserved.</div>
-        <div>Made with care.</div>
-      </div>
-    </div>
-  </footer>
-</div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
   <script src="js/products.js"></script>
   <script src="js/app.js"></script>
 </body>
